--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
 </head>
 <body>
 <h3>Asmita Sharma</h3>
+<h3>Asmita Sharma twi</h3>
+
   <h1>Expense Tracker</h1>
 
   <form action="/add-expense" method="POST">
