--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,7 @@
   <title>Expense Tracker</title>
 </head>
 <body>
-<h3>Asmita Sharma</h3>
-<h3>Asmita Sharma twi</h3>
+  <h3>Asmita Sharmaa</h3>
 
   <h1>Expense Tracker</h1>
 
